# l_tftp

./: CMakeLists.txt  README.md  TFTP_Client.cpp  main.cpp
include/: SocketException.hpp  TFTPClient.h  UDPClient.h
src/: TFTPClient.cpp  UDPClient.cpp
